# design_patterns

./: CMakeLists.txt  design_patterns.cpp  design_patterns.h
creational/: CMakeLists.txt
creational/factory/: CMakeLists.txt
creational/factory/apple/: CMakeLists.txt  client.cpp
creational/factory/apple/factory/: CMakeLists.txt  iphone11_factory.cpp  iphone11_factory.h  iphone_factory.h  iphone_simple_factory.cpp  iphone_simple_factory.h  iphonex_factory.cpp  iphonex_factory.h
creational/factory/apple/model/: CMakeLists.txt  iphone.cpp  iphone.h  iphone11.cpp  iphone11.h  iphone11pro.cpp  iphone11pro.h  iphonex.cpp  iphonex.h  iphonexsmax.cpp  iphonexsmax.h
